--- a/Homework 3/Latex/Homework3_cs4570.tex
+++ b/Homework 3/Latex/Homework3_cs4570.tex
@@ -319,6 +319,7 @@ This results in some digits (e.g., 1, 0, 8) being clearly recognizable, though o
     \label{fig:generated_samples}
 \end{figure}
 
+\subsection{Generative Adversarial Network (GAN).}
 
 
 \end{document}
