--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -257,6 +257,63 @@
     "### (b) Build a Variational Autoencoder (VAE) OR a Generative Adversarial Network (GAN) to generate new samples.\n",
     "Rigorously tune any hyperparameters.Are the samples generated recognizable as digits? Are all possible digits generated?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eb7a47a",
+   "metadata": {},
+   "source": [
+    "  Mean Diff: 0.0355 | Std Diff: 0.0695 | Diversity: 1.799\n",
+    "  Mean Diff: 0.0399 | Std Diff: 0.0146 | Diversity: 1.615\n",
+    "  Mean Diff: 0.0244 | Std Diff: 0.0081 | Diversity: 1.693\n",
+    "  Mean Diff: 0.0394 | Std Diff: 0.0244 | Diversity: 1.505\n",
+    "  Mean Diff: 0.0234 | Std Diff: 0.0772 | Diversity: 1.507\n",
+    "  Mean Diff: 0.0610 | Std Diff: 0.0108 | Diversity: 1.386\n",
+    "  Mean Diff: 0.0665 | Std Diff: 0.0384 | Diversity: 1.821\n",
+    "  Mean Diff: 0.0521 | Std Diff: 0.0669 | Diversity: 1.648\n",
+    "  Mean Diff: 0.0530 | Std Diff: 0.0693 | Diversity: 1.622\n",
+    "  Mean Diff: 0.0614 | Std Diff: 0.0428 | Diversity: 1.527\n",
+    "  Mean Diff: 0.1073 | Std Diff: 0.0362 | Diversity: 1.516\n",
+    "  Mean Diff: 0.0274 | Std Diff: 0.0759 | Diversity: 1.422\n",
+    "  Mean Diff: 0.0495 | Std Diff: 0.0619 | Diversity: 1.809\n",
+    "  Mean Diff: 0.0427 | Std Diff: 0.0224 | Diversity: 1.695\n",
+    "  Mean Diff: 0.0303 | Std Diff: 0.0810 | Diversity: 1.683\n",
+    "  Mean Diff: 0.0049 | Std Diff: 0.0806 | Diversity: 1.558\n",
+    "  Mean Diff: 0.0008 | Std Diff: 0.0301 | Diversity: 1.569\n",
+    "  Mean Diff: 0.0576 | Std Diff: 0.1575 | Diversity: 1.434\n",
+    "Tuning Results Summary:\n",
+    " latent_dim    lr_g   g_hidden   d_hidden  mean_diff  std_diff  diversity_ratio\n",
+    "         32 0.00005 [128, 256] [256, 128]   0.035519  0.069522         1.798594\n",
+    "         32 0.00005 [256, 512] [512, 256]   0.039905  0.014617         1.614807\n",
+    "         32 0.00010 [128, 256] [256, 128]   0.024352  0.008129         1.692949\n",
+    "         32 0.00010 [256, 512] [512, 256]   0.039375  0.024415         1.504985\n",
+    "         32 0.00020 [128, 256] [256, 128]   0.023443  0.077174         1.507142\n",
+    "         32 0.00020 [256, 512] [512, 256]   0.061023  0.010811         1.385984\n",
+    "         64 0.00005 [128, 256] [256, 128]   0.066535  0.038420         1.820829\n",
+    "         64 0.00005 [256, 512] [512, 256]   0.052085  0.066898         1.648213\n",
+    "         64 0.00010 [128, 256] [256, 128]   0.053011  0.069283         1.621573\n",
+    "         64 0.00010 [256, 512] [512, 256]   0.061386  0.042757         1.526785\n",
+    "         64 0.00020 [128, 256] [256, 128]   0.107317  0.036166         1.515745\n",
+    "         64 0.00020 [256, 512] [512, 256]   0.027371  0.075890         1.421589\n",
+    "        128 0.00005 [128, 256] [256, 128]   0.049508  0.061871         1.809039\n",
+    "        128 0.00005 [256, 512] [512, 256]   0.042693  0.022421         1.695204\n",
+    "        128 0.00010 [128, 256] [256, 128]   0.030315  0.081037         1.683092\n",
+    "        128 0.00010 [256, 512] [512, 256]   0.004886  0.080638         1.558201\n",
+    "        128 0.00020 [128, 256] [256, 128]   0.000816  0.030138         1.568593\n",
+    "        128 0.00020 [256, 512] [512, 256]   0.057632  0.157499         1.434154"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a870a04",
+   "metadata": {},
+   "source": [
+    "综合看来，G=[128, 256]、latent_dim=64 是模型最合适的参数，其拥有最低的 mean difference 和较低的 std difference。而 loss 的部分，由于 GAN 的 loss 反映的是 Generator 与 Discriminator 的对抗平衡状态，并非生成质量的直接度量，因此我们以生成样本与原始数据的统计差异（mean_diff, std_diff）作为主要选择依据，而 loss 仅作参考。\n",
+    "对于学习率，我们采用 Radford et al. (2016) 在 DCGAN 中提出的推荐值 α=0.0002\\alpha=0.0002\n",
+    "α=0.0002，该值在多种图像生成任务中被验证具有良好的稳定性。考虑到本实验数据规模较小（8×88 \\times 8\n",
+    "8×8 图像，n=1797n=1797\n",
+    "n=1797 样本），过大的学习率易导致训练不稳定，而该推荐值在我们的实验中表现稳定。"
+   ]
   }
  ],
  "metadata": {
