--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -308,11 +308,14 @@
    "id": "8a870a04",
    "metadata": {},
    "source": [
-    "综合看来，G=[128, 256]、latent_dim=64 是模型最合适的参数，其拥有最低的 mean difference 和较低的 std difference。而 loss 的部分，由于 GAN 的 loss 反映的是 Generator 与 Discriminator 的对抗平衡状态，并非生成质量的直接度量，因此我们以生成样本与原始数据的统计差异（mean_diff, std_diff）作为主要选择依据，而 loss 仅作参考。\n",
-    "对于学习率，我们采用 Radford et al. (2016) 在 DCGAN 中提出的推荐值 α=0.0002\\alpha=0.0002\n",
-    "α=0.0002，该值在多种图像生成任务中被验证具有良好的稳定性。考虑到本实验数据规模较小（8×88 \\times 8\n",
-    "8×8 图像，n=1797n=1797\n",
-    "n=1797 样本），过大的学习率易导致训练不稳定，而该推荐值在我们的实验中表现稳定。"
+    "综合看来，latent_dim=32, lr_g=0.0001, G=[128, 256] 是最合适的参数组合：其 std_diff 最低（生成样本的分布形状最接近原始数据），mean_diff 也处于前列，且 latent=32 更轻量、不易过拟合，diversity ≈ 1.7 说明没有严重的 mode collapse。相比之下，latent=128 的组合虽然 mean_diff 更低，但 std_diff 差距明显，说明生成分布的\"形状\"偏离较大。\n",
+    "其余超参数如 αD\\alpha_D\n",
+    "αD​ 固定为 0.0002，与 DCGAN 论文一致。最终选择 αG<αD\\alpha_G < \\alpha_D\n",
+    "αG​<αD​，即让 Generator 学习更慢，因为在之前 αG=αD\\alpha_G = \\alpha_D\n",
+    "αG​=αD​ 的实验中，Discriminator 被 Generator 主导导致训练崩溃。\n",
+    "\n",
+    "在最佳参数下，模型训练过程如图Figures\\2b_gan_training.png所示。与之前的实验相比，两者的 loss 相对收敛，基本稳定在 1.0–1.2，Discriminator 准确率也超过 0.5。但分辨真实样本与生成样本的准确率存在显著差异：分辨假样本时准确率稳定在 0.8 以上，而分辨真样本时却不足 0.6。这反映了 Vanilla GAN 的固有缺陷——min-max 博弈难以达到纳什均衡，也解释了后续 WGAN、Diffusion Models 等方法的研究动机。\n",
+    "生成样本示例如图Figures\\2b_generated_samples_gan.png所示，部分数字（如 0、1、2、3、5、6、9）具有较高辨识度，整体表现明显优于 KDE。"
    ]
   }
  ],
