--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -317,6 +317,57 @@
     "在最佳参数下，模型训练过程如图Figures\\2b_gan_training.png所示。与之前的实验相比，两者的 loss 相对收敛，基本稳定在 1.0–1.2，Discriminator 准确率也超过 0.5。但分辨真实样本与生成样本的准确率存在显著差异：分辨假样本时准确率稳定在 0.8 以上，而分辨真样本时却不足 0.6。这反映了 Vanilla GAN 的固有缺陷——min-max 博弈难以达到纳什均衡，也解释了后续 WGAN、Diffusion Models 等方法的研究动机。\n",
     "生成样本示例如图Figures\\2b_generated_samples_gan.png所示，部分数字（如 0、1、2、3、5、6、9）具有较高辨识度，整体表现明显优于 KDE。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dea0226a",
+   "metadata": {},
+   "source": [
+    "### (c) Apply a denoising diffusion model to generate new samples from this data. \n",
+    "Comapre the samples generated to those from the above methods and discuss your results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd2c55d",
+   "metadata": {},
+   "source": [
+    "Tuning Results Summary:\n",
+    " num_timesteps     lr     hidden_dims  final_loss  mean_diff  std_diff  diversity_ratio\n",
+    "           200 0.0001 [128, 256, 128]    0.397042   0.780336  0.308475         2.122012\n",
+    "           200 0.0001 [256, 512, 256]    0.306661   0.218310  0.445004         1.683569\n",
+    "           200 0.0005 [128, 256, 128]    0.278427   0.169971  0.539205         1.640831\n",
+    "           200 0.0005 [256, 512, 256]    0.240664   0.020464  0.744339         1.451204\n",
+    "           200 0.0010 [128, 256, 128]    0.258257   0.089139  0.645056         1.549303\n",
+    "           200 0.0010 [256, 512, 256]    0.233321   0.007569  0.719233         1.437204\n",
+    "           500 0.0001 [128, 256, 128]    0.346644   1.303562  1.322603         2.274626\n",
+    "           500 0.0001 [256, 512, 256]    0.240584   0.483363  0.561203         1.992378\n",
+    "           500 0.0005 [128, 256, 128]    0.212621   0.343480  0.113067         1.814647\n",
+    "           500 0.0005 [256, 512, 256]    0.176663   0.005402  0.567972         1.479918\n",
+    "           500 0.0010 [128, 256, 128]    0.194704   0.100521  0.530461         1.578311\n",
+    "           500 0.0010 [256, 512, 256]    0.168762   0.012980  0.660851         1.452953\n",
+    "          1000 0.0001 [128, 256, 128]    0.320002   2.692240  1.878439         2.355001\n",
+    "          1000 0.0001 [256, 512, 256]    0.205096   2.010370  1.639684         2.241753\n",
+    "          1000 0.0005 [128, 256, 128]    0.173627   1.267177  1.130676         2.109792\n",
+    "          1000 0.0005 [256, 512, 256]    0.141317   0.133437  0.432766         1.576990\n",
+    "          1000 0.0010 [128, 256, 128]    0.150619   0.225414  0.272470         1.643631\n",
+    "          1000 0.0010 [256, 512, 256]    0.132122   0.054404  0.559425         1.483325\n",
+    "Best Configuration (by Mean Diff):\n",
+    "  Timesteps: 500\n",
+    "  Learning Rate: 0.0005\n",
+    "  Hidden Dims: [256, 512, 256]\n",
+    "  Mean Diff: 0.0054\n",
+    "  Std Diff: 0.5680"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "450e3fc8",
+   "metadata": {},
+   "source": [
+    "本次实验中，我选择优化 lr、timesteps 和 architecture 三个参数。在所有 18 种组合中，通过 mean_diff 和 std_diff 的热力图来确定 lr 和 timesteps，并用 final loss 来确定 architecture。结果如图 X 所示。\n",
+    "从 final loss 来看，architecture [256, 512, 256] 的平均表现明显优于 [128, 256, 128]。在此基础上，timesteps=500、lr=0.0005 的组合取得了最低的 mean_diff（0.0054），std_diff 也处于可接受范围。因此，最终选择 lr=0.0005, timesteps=500, architecture=[256, 512, 256] 作为最优模型设定，后续讨论均基于此配置。"
+   ]
   }
  ],
  "metadata": {
