--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -368,6 +368,34 @@
     "本次实验中，我选择优化 lr、timesteps 和 architecture 三个参数。在所有 18 种组合中，通过 mean_diff 和 std_diff 的热力图来确定 lr 和 timesteps，并用 final loss 来确定 architecture。结果如图 X 所示。\n",
     "从 final loss 来看，architecture [256, 512, 256] 的平均表现明显优于 [128, 256, 128]。在此基础上，timesteps=500、lr=0.0005 的组合取得了最低的 mean_diff（0.0054），std_diff 也处于可接受范围。因此，最终选择 lr=0.0005, timesteps=500, architecture=[256, 512, 256] 作为最优模型设定，后续讨论均基于此配置。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1aafa4d",
+   "metadata": {},
+   "source": [
+    "Training Diffusion Model...\n",
+    "  Timesteps: 500\n",
+    "  Hidden dims: [256, 512, 256]\n",
+    "  Learning rate: 0.0005\n",
+    "  Epochs: 200, Batch size: 128\n",
+    "Epoch [  20/200] | Loss: 0.302732\n",
+    "Epoch [  40/200] | Loss: 0.249733\n",
+    "Epoch [  60/200] | Loss: 0.230896\n",
+    "Epoch [  80/200] | Loss: 0.214719\n",
+    "Epoch [ 100/200] | Loss: 0.193410\n",
+    "Epoch [ 120/200] | Loss: 0.185098\n",
+    "Epoch [ 140/200] | Loss: 0.182768\n",
+    "Epoch [ 160/200] | Loss: 0.172739\n",
+    "Epoch [ 180/200] | Loss: 0.191683\n",
+    "Epoch [ 200/200] | Loss: 0.165001"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d9e72fe",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
