--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -395,7 +395,11 @@
    "cell_type": "markdown",
    "id": "7d9e72fe",
    "metadata": {},
-   "source": []
+   "source": [
+    "模型的训练过程如图 Figures\\2c_diffusion_training.png 所示，生成结果如图 Figures\\2c_generated_samples_diffusion.png 所示。对比三个模型的生成结果，可得出如下结论：\n",
+    "从统计特征来看，GAN 生成的样本亮度更高、对比度更强，Sparsity 也更接近原始数据，说明生成器较好地学习到了数据的整体分布特征。然而从结构清晰度来看，Diffusion 生成的样本轮廓更清晰、数字结构更易辨识，而 KDE 和 GAN 生成的样本则更加模糊。\n",
+    "GAN 在结构清晰度上表现不佳的原因在于判别器过弱——无法准确分辨真实与生成样本。因此，尽管生成器学习到了原始数据的统计特征，但由于能轻易\"骗过\"判别器，缺乏进一步提升真实性的动力。而 Vanilla GAN 对超参数高度敏感，难以找到使 G/D 达到理想平衡的配置，这正是其与 Diffusion 产生差距的根本原因。"
+   ]
   }
  ],
  "metadata": {
